[Fix] Removed semi-colon in SASS entry point

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -37,7 +37,7 @@ a
 #b:checked ~ #m [for=b],
 #c:checked ~ #m [for=c],
 #d:checked ~ #m [for=d]
-    font-weight: 700;
+    font-weight: 700
     color: #809
 
 #m, #g
