[Fix] Enabled fonts and images

--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -89,7 +89,7 @@ input,
 
 u
     display: inline-block
-    background: url(i/i)
+    background: url(/i/i.png)
     height: 72px
     width: 72px
 
@@ -112,23 +112,23 @@ u
     margin-top: -31.8%
 
 #i1
-    background-image: url(i/1)
+    background-image: url(/i/1.png)
 
 #i2
-    background-image: url(i/2)
+    background-image: url(/i/2.png)
 
 #i3
-    background-image: url(i/3)
+    background-image: url(/i/3.png)
 
 #i4
-    background-image: url(i/4)
+    background-image: url(/i/4.png)
 
 #i5
-    background-image: url(i/5)
+    background-image: url(/i/5.png)
 
 #i6
-    background-image: url(i/6)
+    background-image: url(/i/6.png)
 
 #i7
-    background-image: url(i/7)
+    background-image: url(/i/7.png)
 
