--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: s;
-  src: url(f/t) format("woff2"), url(f/s) format("woff");
+  src: url(/f/t.woff2) format("woff2"), url(/f/s.woff) format("woff");
   font-display: swap;
 }
 
 @font-face {
   font-family: f;
-  src: url(f/g) format("woff2"), url(f/f) format("woff");
+  src: url(/f/g.woff2) format("woff2"), url(/f/f.woff) format("woff");
 }
