--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -32,13 +32,6 @@ h1
 a
     text-decoration: none
 
-#a:checked ~ #m [for=a],
-#b:checked ~ #m [for=b],
-#c:checked ~ #m [for=c],
-#d:checked ~ #m [for=d]
-    font-weight: 700
-    color: #809
-
 #m, #g
     margin: 0 1rem
 
@@ -57,23 +50,23 @@ a
 .t,i
     text-align: center
 
-#f > a, nav > label
+.links > a
     cursor: pointer
     display: block
     font-size: 1.3rem
 
-#f > a> i, nav > label > i
+.links > a > i
     width: 2rem
 
-a , nav > label:hover, .p
+a, nav > a:hover, .p
+    color: #809
+    
+.links a.active
+    font-weight: 700
     color: #809
 
 input,
 [name=y] + label,
-#a:not(:checked) ~ #g > :nth-child(1),
-#c:not(:checked) ~ #g > :nth-child(2),
-#b:not(:checked) ~ #g > :nth-child(3),
-#d:not(:checked) ~ #g > :nth-child(4),
 .f
     display: none
 
