--- a/_includes/leftcolumn.html
+++ b/_includes/leftcolumn.html
@@ -1,23 +1,3 @@
----
-navigation:
-    - name: index
-      url: /
-      text: Who am I?
-      icon: 
-    - name: portfolio
-      url: /portfolio/
-      text: Portfolio
-      icon: 
-    - name: skills
-      url: /skills/
-      text: Skills
-      icon: 
-    - name: resume
-      url: /resume/
-      text: Resume
-      icon: 
----
-
 <div id=m>
     <div class="c t">
         <u class=a></u>
@@ -32,7 +12,7 @@ navigation:
             <span>▲</span>
         </label>
         <nav class="links">
-            {% for item in page.navigation %}
+            {% for item in site.data.navigation %}
             <a {% if page.active == item.name %}class="active"{% endif %} href="{{item.url}}">
                 <i>{{item.icon}}</i> {{item.text}}
             </a>
