--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -10,7 +10,7 @@ html
 i
     font-style: normal
     display: inline-block
-    font-family: f
+    font-family: icon
     font-weight: 100
 
 body
@@ -18,7 +18,7 @@ body
     margin: 0 auto
     overflow-y: scroll
     display: flex
-    font-family: s,Helvetica
+    font-family: text, Helvetica
 
 h1, h2
     margin: 0
@@ -77,7 +77,7 @@ a, nav > a:hover, .p
 
 u
     display: inline-block
-    background: url(/i/i.png)
+    background: url("/assets/img/i.png")
     height: 72px
     width: 72px
 
@@ -100,24 +100,24 @@ u
     margin-top: -31.8%
 
 #i1
-    background-image: url(/i/1.png)
+    background-image: url("/assets/img/1.png")
 
 #i2
-    background-image: url(/i/2.png)
+    background-image: url("/assets/img/2.png")
 
 #i3
-    background-image: url(/i/3.png)
+    background-image: url("/assets/img/3.png")
 
 #i4
-    background-image: url(/i/4.png)
+    background-image: url("/assets/img/4.png")
 
 #i5
-    background-image: url(/i/5.png)
+    background-image: url("/assets/img/5.png")
 
 #i6
-    background-image: url(/i/6.png)
+    background-image: url("/assets/img/6.png")
 
 #i7
-    background-image: url(/i/7.png)
+    background-image: url("/assets/img/7.png")
 
 @import "responsive"
