[Fix] Missing statement separators

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,8 +1,7 @@
 ---
-    # // Style entry point
 ---
 
-@import "fonts"
+@import "fonts";
 
 html {
     background: #ecf0f1;
@@ -150,4 +149,4 @@ u {
     background-image: url("/assets/img/7.png");
 }
 
-@import "responsive"
+@import "responsive";
