--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,12 @@
 <body>
     {% include leftcolumn.html %}
 
-    <div id=g>
+    <div id="content">
         <div>
             {{ content }}
         </div>
 
-        <div class="c t f">
+        <div class="card text-center md-hide">
             <p>Developed with ❤</p>
             <p>Vincenzo <b>Scalzi</b></p>
         </div>
