--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,14 +12,9 @@
     {% include leftcolumn.html %}
 
     <div id="content">
-        <div>
-            {{ content }}
-        </div>
+        {{ content }}
 
-        <div class="card text-center md-hide">
-            <p>Developed with ❤</p>
-            <p>Vincenzo <b>Scalzi</b></p>
-        </div>
+        {% include footer.html additional-class="md-hide" %}
     </div>
 </body>
 
