[Fix] Incorrect include paths

--- a/_includes/leftcolumn.html
+++ b/_includes/leftcolumn.html
@@ -1,6 +1,6 @@
 <div id="menu">
-    {% include title.html %}
-    {% include navigation.html %}
-    {% include social.html %}
-    {% include footer.html additional-class="sm-hide" %}
+    {% include partials/title.html %}
+    {% include partials/navigation.html %}
+    {% include partials/social.html %}
+    {% include partials/footer.html additional-class="sm-hide" %}
 </div>
