--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <div id="content">
         {{ content }}
 
-        {% include footer.html additional-class="md-hide" %}
+        {% include partials/footer.html additional-class="md-hide" %}
     </div>
 </body>
 
