update: New blog!

--- a/_includes/partials/navigation.html
+++ b/_includes/partials/navigation.html
@@ -6,7 +6,7 @@
     </a>
     {% endfor %}
     <hr>
-    {% if site.data.social.twitter %}<a href="https://twitter.com/{{site.data.social.twitter}}" style=color:#55acee><span class="icon"></span> Twitter</a>{% endif %}
-    {% if site.data.social.linkedin %}<a href="https://linkedin.com/in/{{site.data.social.linkedin}}" style=color:#007bb5><span class="icon"></span> LinkedIn</a>{% endif %}
-    {% if site.data.social.medium %}<a href="https://medium.com/@{{site.data.social.medium}}" style=color:#00ab6c><span class="icon"></span> Medium</a>{% endif %}
+    {% if site.data.social.twitter %}<a href="https://twitter.com/{{site.data.social.twitter}}" rel="nofollow" style=color:#55acee><span class="icon"></span> Twitter</a>{% endif %}
+    {% if site.data.social.linkedin %}<a href="https://linkedin.com/in/{{site.data.social.linkedin}}" rel="nofollow" style=color:#007bb5><span class="icon"></span> LinkedIn</a>{% endif %}
+    <a href="https://blog.vcz.fr" style=color:#00ab6c><span class="icon">∵</span> VCZ Blog</a>
 </nav>
