--- a/_includes/partials/navigation.html
+++ b/_includes/partials/navigation.html
@@ -5,7 +5,9 @@
         <span class="icon">{{item.icon}}</span> {{item.text}}
     </a>
     {% endfor %}
-    <hr>
+</nav>
+<nav class="card links">
+    <h2 class="text-center">Links</h2>
     {% if site.data.social.twitter %}<a href="https://twitter.com/{{site.data.social.twitter}}" rel="nofollow" style=color:#55acee><span class="icon"></span> Twitter</a>{% endif %}
     {% if site.data.social.linkedin %}<a href="https://linkedin.com/in/{{site.data.social.linkedin}}" rel="nofollow" style=color:#007bb5><span class="icon"></span> LinkedIn</a>{% endif %}
     <a href="https://blog.vcz.fr" style=color:#00ab6c><span class="icon">∵</span> VCZ Blog</a>
