chore: New logo animation
Skew of 33.7deg creates a square out of my parallelogram logo!

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -114,7 +114,7 @@ nav > a:hover,
     }
 
     :first-child:hover #logo {
-        transform: rotate(-15deg) scale(1.1);
+        transform: skew(33.7deg);
     }
 }
 
