--- a/_includes/partials/title.html
+++ b/_includes/partials/title.html
@@ -1,5 +1,5 @@
 <div class="card text-center">
     <img alt="My logo" src="/assets/img/i.webp" id="logo"/>
     <h1><span class="purple">V</span>in<span class="purple">c</span>en<span class="purple">z</span>o <b>Scalzi</b></h1>
-    <p>Web Performance Addict <b class="purple">&amp;&amp;</b> Engineer</p>
+    <p>Minimize cruft. Maximize craft</p>
 </div>
