--- a/_includes/partials/title.html
+++ b/_includes/partials/title.html
@@ -1,5 +1,11 @@
 <div class="card text-center">
-    <img alt="My logo" src="/assets/img/i.webp" id="logo"/>
+    <div id="logo">
+        <div class="x"></div>
+        <div class="c"></div>
+        <div class="b"></div>
+        <div class="g"></div>
+        <div class="y"></div>
+    </div>
     <h1><span class="purple">V</span>in<span class="purple">c</span>en<span class="purple">z</span>o <b>Scalzi</b></h1>
     <p>Minimize cruft. Maximize craft</p>
 </div>
