--- a/_sass/dark-theme.scss
+++ b/_sass/dark-theme.scss
@@ -1,27 +1,13 @@
 @media screen and (prefers-color-scheme: dark) {
-    html {
-        background: $bg-color-dark;
-        color: $text-color-dark;
-    }
+    :root {
+        --bg-color: #333;
+        --card-color: #222;
+        --card-accent: #000;
+        --text-color: #eee;
+        --text-accent: #e6f;
 
-    hr {
-        color: $text-color-dark;
-    }
-
-    .card {
-        background: $card-color-dark;
-        box-shadow: 5px 5px $card-accent-dark;
-    }
-
-    .links > a {
-        color: $text-color-dark;
-
-        &.active {
-            color: $text-accent-dark;
-        }
-    }
-
-    a, nav > a:hover, .purple {
-        color: $text-accent-dark;
+        --bg-zone-a: #e33;
+        --bg-zone-b: #66f;
+        --bg-success: #4a4;
     }
 }
