--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -8,7 +8,7 @@
     --bg-zone-a: #fdd;
     --bg-zone-b: #ddf;
     --bg-success: #dfd;
-}
 
-$indicator-error: #ff2828;
-$indicator-success: #b1f626;
+    --indicator-error: #ff2828;
+    --indicator-success: #b1f626;
+}
