--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,16 +1,20 @@
 ---
 ---
 
-@import "vars";
-@import "fonts";
+@forward "vars";
+@forward "fonts";
 
 // Apps
-@import "inputs";
-@import "indicators";
+@forward "inputs";
+@forward "indicators";
 
 // Blog
-@import "blog";
-@import "code";
+@forward "blog";
+@forward "code";
+
+@forward "apps";
+@forward "responsive";
+@forward "dark-theme";
 
 html {
     background: var(--bg-color);
@@ -204,7 +208,3 @@ nav > a:hover,
         transition-delay: 0.6s;
     }
 }
-
-@import "apps";
-@import "responsive";
-@import "dark-theme";
