Reimagine on AWS slide

--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -24,8 +24,7 @@
             center: false,
             controlsTutorial: false,
             slideNumber: true,
-            help: false,
-            preloadIframes: true
+            help: false
         });
     </script>
 </body>
