Front page wording refresh

--- a/_includes/partials/title.html
+++ b/_includes/partials/title.html
@@ -7,5 +7,5 @@
         <div class="y"></div>
     </div>
     <h1><span class="purple">V</span>in<span class="purple">c</span>en<span class="purple">z</span>o <b>Scalzi</b></h1>
-    <p>Omni-curious technologist</p>
+    <p>Web Addict &amp;&amp; Engineer</p>
 </div>
